--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.12.0"
   }
